--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 Reproducible Research Course Project 1"
 Prepared 2017-07-28 by Justin Goldstein using RStudio v.1.0.143
 =====================================================================================
@@ -104,22 +109,22 @@ identically to the fashion mentioned above, except using these imputed values.
 numberNAs<-sum(is.na(activity$steps))  # Quantifies number of "NA"s in "steps" column
 numberNAsavg<-100*numberNAs/length(activity[,1])
 
+activity<-read.csv("activity.csv", header=TRUE, sep=",")
 activitynona<-activity           # Creates an identical dataset
 
 # Perform the imputation
 for (i in 1:length(activitynona$steps)) {
-if (is.na(activitynona$steps[i])) {
-activitynona$steps[i] <- median(activity$steps,na.rm =TRUE)
-}
+  if (is.na(activitynona$steps[i])) {
+    activitynona$steps[i] <- median(activity$steps,na.rm =TRUE)
+  }
 }
 
 # Create the histogram
-hist(totalstepsperday, xlab = "Steps per Day", 
+hist(activitynona$steps, xlab = "Steps per Day", 
 main = "Histogram of data when NAs are imputed")
 
 #Computes new median and mean steps per day values.
-totalstepsperday<-tapply(activitynona$steps, activitynona$date,
-sum, na.rm=TRUE)
+totalstepsperday<-tapply(activitynona$steps, activitynona$date, sum, na.rm=TRUE)
 meantotalstepsday<-mean(totalstepsperday)
 mediantotalstepsday<-median(totalstepsperday)
 ```
@@ -128,7 +133,8 @@ The "steps" column in the "activity" dataframe contains `r numberNAs` missing va
 equivalent to `r numberNAs` of all those values.
 
 As the median value for all steps is zero, all the "NA" values in the "steps" 
-column of this new otherwise identical dataset were replaced with zeroes.
+column of this new otherwise identical dataset were replaced with zeroes.  This explains
+the "long-tail" distribution of the histogram, with most of the values being zeroes.
 
 This new dataset (which doesn't contain "NA" values) is called *activitynona*.  
 A histogram of the steps is practically identical to that shown above.
@@ -146,10 +152,18 @@ across **weekdays** and **weekends**.  We do this by (1) copying the "activity" 
 
 ``` {r weekends_weekdays, echo=TRUE}
 
-#Prepare file formats
-activitynona$date <- as.Date(activitynona$date)
-activitynona$daytype<-weekdays(activitynona$date) %>%
-  as.vector()
+#Prepare file formats - ensure no NAs
+activitynona$date<-as.Date(activitynona$date, format = "%Y-%m-%d")
+
+
+for (i in 1:length(activitynona$steps)) {
+  if (is.na(activitynona$steps[i])) {
+    activitynona$steps[i] <- median(activity$steps,na.rm =TRUE)
+  }
+}
+
+#Convert date to day of week
+activitynona$daytype<-weekdays(activitynona$date)
 
 # Check to see to which of two categories: "weekend" or "weekday," an obs belongs
 for (i in 1:length(activitynona$daytype)) {
@@ -161,13 +175,14 @@ for (i in 1:length(activitynona$daytype)) {
 }
 
 #Subset by *activitynona* value for "weekday" or "weekend"
-weekendinfo<-subset(activitynona, activitynona$daytype == "weekend")
-weekdayinfo<-subset(activitynona, activitynona$daytype == "weekday")
+weekendinfo<-subset(activitynona, daytype == "weekend")
+weekdayinfo<-subset(activitynona, daytype == "weekday")
 
 #Plot
 par(mfrow=c(1,2))
 stepsweekendmean <- tapply(weekendinfo$steps, weekendinfo$interval, mean)
-  plot(stepsweekendmean, main="Mean Interval of Steps\n Taken on Weekends", cex = 0.8, xlab = "Mean Number of Steps", ylab = "Interval")
+  plot(stepsweekendmean, main="Mean Interval of Steps\n Taken on Weekends", cex = 0.8, type="l", 
+       xlab = "Mean Number of Steps", ylab = "Interval")
   points(stepsweekendmean, pch=1)
   lines(stepsweekendmean, col=1)
 
